--- a/loggingConfig.json
+++ b/loggingConfig.json
@@ -2,16 +2,16 @@
     "version": 1,
     "formatters": {
         "simple": {
-            "format": "%(levelname)-8s | %(funcName)s [%(lineno)d]\t|| %(message)s"
+            "format": "%(levelname)-8s |\t%(message)s"
         },
         "detailed": {
-            "format": "%(asctime)s | %(levelname)-10s | %(name)-10s | %(filename)-10s | %(funcName)s [%(lineno)d]\t|| %(message)s"
+            "format": "%(asctime)s | %(levelname)-10s | %(name)-10s | %(filename)-10s | %(funcName)-15s [%(lineno)d]\t|| %(message)s"
         }
     },
     "handlers": {
         "file_handler": {
             "class": "logging.FileHandler",
-            "filename": "app.log",
+            "filename": "server.log",
             "formatter": "detailed",
             "level": "DEBUG"
         },
