Base protocol defined

--- a/config/loggingConfig.json
+++ b/config/loggingConfig.json
@@ -18,7 +18,7 @@
         "console_handler": {
             "class": "logging.StreamHandler",
             "formatter": "simple",
-            "level": "INFO"
+            "level": "WARNING"
         }
     },
     "loggers": {
